--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ bleach==3.1.0
 certifi==2019.3.9
 Click==7.0
 cloudpickle==1.4.1
+cudatoolkit=10.0.130
+cudnn=7.3.1=cuda10.0_0
+cupti=10.0.130
 cycler==0.10.0
 Cython==0.29.15
 decorator==4.4.0
@@ -91,8 +94,10 @@ tables==3.6.1
 tabulate==0.8.3
 tensorboard==1.13.1
 tensorboardX==2.1
-tensorflow==1.13.1
+tensorflow=1.13.1
+tensorflow-base=1.13.1
 tensorflow-estimator==1.13.0
+tensorflow-gpu==1.13.1
 tensorflow-probability==0.6.0
 tensorpack==0.9.4
 termcolor==1.1.0
