--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ bleach==3.1.0
 certifi==2019.3.9
 Click==7.0
 cloudpickle==1.4.1
-cudatoolkit=10.0.130
-cudnn=7.3.1=cuda10.0_0
+cudatoolkit==10.0.130
+cudnn==7.3.1
 cupti=10.0.130
 cycler==0.10.0
 Cython==0.29.15
